--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass": "^1.52.1",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4",
+    "express": "^4.18.1",
     "workbox-background-sync": "^6.5.3",
     "workbox-broadcast-update": "^6.5.3",
     "workbox-cacheable-response": "^6.5.3",
@@ -52,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
