--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
     "react": "^18.1.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
