--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.1",
     "font-awesome": "^4.7.0",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
